Added mean squared error (MSE) for comparing similarity between images.

--- a/book.ipynb
+++ b/book.ipynb
@@ -32,6 +32,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "9cdc5f9c-f9f4-441b-98fa-02b518a48c23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mse(imageA, imageB):\n",
+    "\t# the 'Mean Squared Error' between the two images is the\n",
+    "\t# sum of the squared difference between the two images;\n",
+    "\t# NOTE: the two images must have the same dimension\n",
+    "\terr = np.sum((imageA.astype(\"float\") - imageB.astype(\"float\")) ** 2)\n",
+    "\terr /= float(imageA.shape[0] * imageA.shape[1])\n",
+    "\t\n",
+    "\t# return the MSE, the lower the error, the more \"similar\"\n",
+    "\t# the two images are\n",
+    "\treturn err"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "71c964e5-be0f-4927-a5eb-86964dc58abd",
    "metadata": {},
