--- a/book.ipynb
+++ b/book.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "a6eabca9-798e-4460-bcd9-aceac3f2336c",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "71c964e5-be0f-4927-a5eb-86964dc58abd",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "id": "03af3cd9-4914-48a2-aea6-2e8a4de5f973",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "id": "4d81388e-5935-4b09-9597-841dc4c62158",
    "metadata": {},
    "outputs": [],
@@ -136,21 +136,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f402eb02-f724-443b-9163-954839b2e3d7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import glob\n",
+    "from functools import cmp_to_key\n",
+    "\n",
+    "def custom_sort_function(fileA, fileB):\n",
+    "    start_indx = 12\n",
+    "    end_indx_fileA = fileA.find('.')\n",
+    "    end_indx_fileB = fileB.find('.')\n",
+    "\n",
+    "    num_file_a = int(fileA[start_indx:end_indx_fileA])\n",
+    "    num_file_b = int(fileB[start_indx:end_indx_fileB])\n",
+    "\n",
+    "    if (num_file_a < num_file_b):\n",
+    "        return -1\n",
+    "    else:\n",
+    "        return 1\n",
     "\n",
     "def load_images_from(folder):\n",
     "    images = []\n",
     "    files = glob.glob(f\"{folder}/*.jpg\") # obtain list of all the files that match this pattern (ending with jpg)\n",
+    "    sorted_files = sorted(files, key=cmp_to_key(custom_sort_function))\n",
     "    \n",
-    "    for file in files:\n",
+    "    for file in sorted_files:\n",
     "        img = cv2.imread(file, 0) # read them on gray scales\n",
     "        images.append(img)\n",
-    "    return images"
+    "    return images\n",
+    "    "
    ]
   },
   {
@@ -163,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1384e34f-318f-46e9-b640-35a4374b3831",
    "metadata": {},
    "outputs": [],
@@ -194,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "id": "5e0011a8-b177-4e7f-a34c-ebdd936e5642",
    "metadata": {},
    "outputs": [],
@@ -227,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "id": "9aea6c66-f508-46fe-abe8-16c673720f70",
    "metadata": {},
    "outputs": [],
@@ -237,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "id": "c9891bc9-de01-455e-b5a0-2626b2b183d3",
    "metadata": {},
    "outputs": [],
@@ -276,12 +292,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "id": "7d9abd2c-1603-4ca2-9196-dbe6592bdc28",
    "metadata": {},
    "outputs": [],
    "source": [
-    "images = load_images_from_folder('frames') # load all the images into the array, without distiction"
+    "images = load_images_from('frames') # load all the images into the array, without distiction"
    ]
   },
   {
@@ -301,7 +317,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save(unique_imgs, in_directory='frames_ssmi') # save the images into the folder"
+    "# save(unique_imgs, in_directory='frames_ssmi') # save the images into the folder\n",
+    "save(unique_imgs, in_directory='testing') # save the images into the folder"
    ]
   },
   {
@@ -315,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "b15f6970-81a8-44d6-b9b9-93214e089a3f",
    "metadata": {},
    "outputs": [],
@@ -334,20 +351,20 @@
     "        img = cv2.imread(file, 0)\n",
     "        have_left_border = img[10, 11] in range(120, 180)\n",
     "        have_right_border = img[10, 902] in range(120, 180)\n",
-    "        same_image_than\n",
-    "        if  and img[10, 902] in range(120, 180) and not np.array_equal(images[-1],img):\n",
+    "        same_image_than_previous = np.array_equal(images[-1],img)\n",
+    "        \n",
+    "        if  have_left_border and have_right_border and not same_image_than_previous:\n",
     "            images.append(img)\n",
-    "    return images\n",
-    "\n",
-    "def load_images_from(folder):\n",
-    "    images = []\n",
-    "    files = glob.glob(f\"{folder}/*.jpg\") # obtain list of all the files that match this pattern (ending with jpg)\n",
-    "    \n",
-    "    for file in files:\n",
-    "        img = cv2.imread(file, 0) # read them on gray scales\n",
-    "        images.append(img)\n",
     "    return images"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adb0a851-dc03-4eda-ac58-d5519422aa38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
